<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/aqua"
    android:orientation="vertical" >

    <Button
        android:id="@+id/button_menu_supervisor_salir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="51dp"
        android:text="@string/salir"
        android:textSize="16sp"
        android:typeface="sans" />

    <Button
        android:id="@+id/button_menu_supervisor_equipamiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_menu_supervisor_trabajos"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/menu_supervisor_equipamiento"
        android:textSize="16sp"
        android:typeface="sans" />

    <Button
        android:id="@+id/button_menu_supervisor_trabajos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_menu_supervisor"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/menu_supervisor_trabajos"
        android:textSize="16sp"
        android:typeface="sans" />

    <Button
        android:id="@+id/button_menu_supervisor_empleados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_menu_supervisor_equipamiento"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/menu_supervisor_empleados"
        android:textSize="16sp"
        android:typeface="sans" />

    <TextView
        android:id="@+id/text_menu_supervisor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:text="@string/menu_supervisor_titulo"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="22sp"
        android:textStyle="bold"
        android:typeface="sans" />

    <TextView
        android:id="@+id/text_menu_supervisor_bienvenida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text=""
        android:textSize="14sp"
        android:typeface="sans" />

</RelativeLayout>