<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/aqua" >

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:paddingRight="10dp"
        android:stretchColumns="1" >

        <TextView
            android:id="@+id/text_trabajos_empleado_cabecera"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/trabajo_empleado_cabecera"
            android:textSize="22sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <TableRow>

            <TextView
                android:id="@+id/text_trabajo_empleado_id_trabajo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/text_trabajo_empleado_id_trabajo"
                android:textSize="14sp"
                android:typeface="sans" >
            </TextView>

            <TextView
                android:id="@+id/text_trabajo_empleado_id_trabajo_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text=""
                android:textSize="14sp"
                android:typeface="sans" >
            </TextView>
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/text_trabajo_empleado_id_supervisor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/text_trabajo_empleado_id_supervisor"
                android:textSize="14sp"
                android:typeface="sans" >
            </TextView>

            <TextView
                android:id="@+id/text_trabajo_empleado_id_supervisor_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text=""
                android:textSize="14sp"
                android:typeface="sans" >
            </TextView>
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/text_trabajo_empleado_num_empleado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/text_trabajo_empleado_num_empleado"
                android:textSize="14sp"
                android:typeface="sans" >
            </TextView>

            <TextView
                android:id="@+id/text_trabajo_empleado_num_empleado_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text=""
                android:textSize="14sp"
                android:typeface="sans" >
            </TextView>
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/text_trabajo_empleado_provincia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/text_trabajo_empleado_provincia"
                android:textSize="14sp"
                android:typeface="sans" >
            </TextView>

            <TextView
                android:id="@+id/text_trabajo_empleado_provincia_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text=""
                android:textSize="14sp"
                android:typeface="sans" >
            </TextView>
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/text_trabajo_empleado_descripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/text_trabajo_empleado_descripcion"
                android:textSize="14sp"
                android:typeface="sans" >
            </TextView>

            <TextView
                android:id="@+id/text_trabajo_empleado_descripcion_data"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:gravity="left"
                android:maxWidth="40dp"
                android:paddingRight="5dp"
                android:textSize="14sp"
                android:typeface="sans" >
            </TextView>
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/text_trabajo_empleado_estado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/text_trabajo_empleado_estado"
                android:textSize="14sp"
                android:typeface="sans" >
            </TextView>

            <TextView
                android:id="@+id/text_trabajo_empleado_estado_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text=""
                android:textSize="14sp"
                android:typeface="sans" >
            </TextView>
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/button_trabajo_empleado_estado"
                android:layout_width="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/button_trabajo_empleado_estado"
                android:textSize="16sp"
                android:typeface="sans" />
        </TableRow>

        <Button
            android:id="@+id/button_trabajo_empleado_posiciongps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/button_trabajo_empleado_posiciongps"
            android:textSize="16sp"
            android:typeface="sans" />
    </TableLayout>

</ScrollView>